Fix questionnaire